// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Attribute-based modifier 1`] = `
"() => create(Foo, {
  className: "Foo_krj hasWhiteText_3j6"
});
css(\`
	/* 2 */
	.Foo_krj { background: red }
	/* 3 */
	.hasWhiteText_3j6 { color: white }
\`);"
`;

exports[`Attribute-based modifier 2`] = `
"() => <Foo className="Foo_krj hasWhiteText_3j6" />;
css(\`
	/* 2 */
	.Foo_krj { background: red }
	/* 3 */
	.hasWhiteText_3j6 { color: white }
\`);"
`;

exports[`Explicitly use modifier 1`] = `
"() => create(Fragment, {}, create(Baz, {
  className: "Baz_6sh Foo_krj"
}), create(Foo, {
  className: "Foo_krj"
}));
css(\`
	/* 2 */
	.Baz_6sh { color: red }
	.Foo_krj { color: blue }
\`);"
`;

exports[`Explicitly use modifier 2`] = `
"() => <Fragment><Baz className="Baz_6sh Foo_krj" /><Foo className="Foo_krj" /></Fragment>;
css(\`
	/* 2 */
	.Baz_6sh { color: red }
	.Foo_krj { color: blue }
\`);"
`;

exports[`Nested modifier 1`] = `
"() => create(Fragment, {}, create(Foo, {
  className: "Foo_krj"
}), create(Bar, {}, create(Foo, {
  className: "Foo_52k Foo_krj"
})));
css(\`
	/* 2 */
	.Foo_krj { color: red }
	/* 2.1 */
	.Foo_52k { color: blue }
\`);"
`;

exports[`Nested modifier 2`] = `
"() => <Fragment><Foo className="Foo_krj" /><Bar><Foo className="Foo_52k Foo_krj" /></Bar></Fragment>;
css(\`
	/* 2 */
	.Foo_krj { color: red }
	/* 2.1 */
	.Foo_52k { color: blue }
\`);"
`;

exports[`Simple modifier 1`] = `
"() => create(Foo, {
  className: "Foo_krj"
});
css(\`
	/* 2 */
	.Foo_krj { color: red }
\`);"
`;

exports[`Simple modifier 2`] = `
"() => <Foo className="Foo_krj" />;
css(\`
	/* 2 */
	.Foo_krj { color: red }
\`);"
`;
